2004-11-28: cvs - Hin-Tak Leung
   . missed HAVE_NULLTRANS in turning on the USE_FLOWCONTROL code.
	
2004-09-29: cvs - Hin-Tak Leung
   . Adding "Printer Memory Low" message to the bottom of an abort,
     rather than just blank.
   . Impose 2,000,000 byte restriction per page only for the 5700L.
	
2004-09-25: cvs - Hin-Tak Leung
   . more work on "print as much as possible on low mem".	
	
2004-09-23: cvs - Hin-Tak Leung
   . Documentation and script addition about flowcontrol=nowhere
   . rough work on "print as much as possible on low mem". Also
     checking in new postscript code for turning on well-tempered
     screening in ghostscript 8.00+.
	
2004-09-16: cvs - Hin-Tak Leung
   . A lot of 6200L-read interpretation updates; switch 6100L to use
     6200L read interpretation.
   . abort compilation on any warning.
   . finish long-overdue nowhere-bid write functionality for
     similating mis-understood/failed read.
   . a lot of fixes with buggy read/polling.
   . relaxed b/w restriction in preparation for future 
     dithering improvements.

2004-09-13: cvs - Hin-Tak Leung
   . x86_64 platform issue: shared libraries requires -fPIC
     to build. Removed libijs.so and the original ijs*example* targets
     from makefiles. We link statically with libieee1284 or libusb
     as always, so there is no need to do anything about these two.
	
2004-06-18: cvs - Hin-Tak Leung
   . update IJS component to 0.35
	
2004-06-02: cvs - Hin-Tak Leung
   . ppc 'unsigned char'/x86 'signed char' fix in epl_compress.c
	
2004-04-11: cvs - Hin-Tak Leung
   . 6200L bug. 

2004-01-16: cvs - Hin-Tak Leung
   . Sync with linuxprinting.org and correcting XML files to 
     address cups compatibility issues.

2004-01-14: cvs - Hin-Tak Leung
   . Added user-contributed foomatic install script for Debian.

2003-12-02: cvs - Hin-Tak Leung
   . Adding 6200L - just making it do 6100L stuff for the time being.
	
2003-09-14: cvs - Roberto Ragusa